== Released [attachment:wiki:SoftwareReleases:eLife-1.6b21.zip V1.6b21]   ==

''' HAL '''

IAdded debugging statements.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b20.zip V1.6b20]   ==

''' M1 '''

Incorporated fixes.

''' Web '''

Ensure all XML packets to be sent to the web browser have a correct target display name. Resolves [ticket:580]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b19.zip V1.6b19]   ==

''' CBUS '''

Ensure non-ascii IP characters are captured at all logging levels.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b18.zip V1.6b18]   ==

''' M1 '''

Ensure null state variables do not break start up.
Set cache correctly for the web client.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b16.zip V1.6b16]   ==

''' M1 '''

Rolled in PIR changes.

''' Calendar '''

Fixed problem with ACTIVE="N" on repeating events. Solves ticket [ticket:575]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b15.zip V1.6b15]   ==

''' CBUS '''

Ensure MMI helper does not get comms reference before comms is properly set up in master model.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b14.zip V1.6b14]   ==

''' CBUS '''

Ensure end of startup will be recognized even if CBUS is not echoing startup strings.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b13.zip V1.6b13]   ==

''' CBUS '''

Recognize CBUS startup even if MMI corrupts the startup string.
Correct CBUS startup handshaking to use correct protocol information.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b12.zip V1.6b12]   ==

''' CBUS '''

Moved MMI into its own object to simpliy Cbus debugging.
Resolved CBUS startup parameter issues.
Solved CBUS checksum issues.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b11.zip V1.6b11]   ==

''' CBUS '''

Fixed startup and performance issues


== Released [attachment:wiki:SoftwareReleases:eLife-1.6b10.zip V1.6b10]   ==

''' M1 '''
