@@ -2,7 +2,7 @@
         <DESC>The BI demonstration CBUS system</DESC>
  
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
@@ -18,6 +18,7 @@
                 </PARAMETERS>
                 
                 <CBUS>
+                    <LIGHT_CBUS ACTIVE="Y" KEY="11" RELAY="Y"  NAME="Relay 10" DISPLAY_NAME="GARAGE_LIGHT" POWER_RATING="100"/>
                     
                         <LIGHT_CBUS ACTIVE="Y" KEY="1" RELAY="Y"  NAME="Relay 1" DISPLAY_NAME="DINING_LIGHT" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="2" RELAY="Y"  NAME="Relay 2" DISPLAY_NAME="RELAY2" POWER_RATING="100"/>
@@ -28,7 +29,7 @@
                         <LIGHT_CBUS ACTIVE="Y" KEY="8" RELAY="Y"  NAME="Relay 7" DISPLAY_NAME="RELAY7" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="9" RELAY="Y"  NAME="Relay 8" DISPLAY_NAME="RELAY8" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="10" RELAY="Y"  NAME="Relay 9" DISPLAY_NAME="RELAY9" POWER_RATING="100"/>
-                        <LIGHT_CBUS ACTIVE="Y" KEY="11" RELAY="Y"  NAME="Relay 10" DISPLAY_NAME="RELAY10" POWER_RATING="100"/>
+                        <LIGHT_CBUS ACTIVE="N" KEY="11" RELAY="Y"  NAME="Relay 10" DISPLAY_NAME="RELAY10" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="13" RELAY="Y"  NAME="Relay 11" DISPLAY_NAME="RELAY11" POWER_RATING="100"/>
                         <LIGHT_CBUS ACTIVE="Y" KEY="16" RELAY="Y"  NAME="Relay 12" DISPLAY_NAME="RELAY12" POWER_RATING="100"/>
      
