@@ -14,7 +14,7 @@ public class Security {
     public final int alarmModel = 3;
     public final int controllerModel = 4;
     
-    public byte allowNumbers [] = {127};
+    private  byte allowNumbers [] = {2};
     
     private static final String vendor_code = new String("4PleHqy5Sr5zJKxsox07nI31nqP0vdw/XT/h4av881NagxNNel/5QxaeejwrZX9XezJHGQQZNyDZetkSyMyuCnyL9g1Ffnwxz5sCITcyYtNGL0VrvHo5Fm9pxJscHKGWfmLN/WLcTrfWalyh7IiNWbwSDKv78bomJVgziX1DTFsnjkzn4cKR96cPE0XJ19OgIv3DJH4XB87pWTzFxJ5U1ol9sT2Ts6Mi8Zl/A1O4v0IxORrVnqXfY4xwz4Flf21wWwXREy+d+9lLqFRFDtC1Gy0XcCTVmaBHIfUDz4QrsqS13AsdxNTNm31IdWIvWpN+k/RLBgUL36WdkQLwDSSry5XVUzC0DGnwiegHqHkZmEMZZV0UwvdUFMDAULv/v+BoFoju95U7ilSHREs5WTXNc9NCbNYK91xl+ekzQo5q6yTwTp99WLoEgwuD2Vai3UxqEow4O5y/QUCN5RRlwpZ6mx353+bzHlPntYQnDcF/UbxGNYER78ojHom6hwvSc2U/RIhqc2TXfLFRDszZDuH3iX1eHpp7/CbGiCXe9GnhOSYUubtdWS5VMl/mkbt6wMwOuro9z3ACXJHG29a3naQuvpOQEPXvJi0ss3mbDUbb6Ktq+xyZvOZ1muykfKrAPXqx5h/l3LE7z3nQ69+5712cWqkcUJAmbFkCZFo1Zb+khxPXfqRrQeI8q3LIFa5P1PVXrU0SE7TOQhqV2JoicAyUj50F/UsqNQ==");
     private boolean keyPresent = false;
@@ -120,6 +120,10 @@ public class Security {
     
     public boolean isConnected() {
 	return connected;
+    }
+    
+    public int getNumberClientsAllowed () {
+    	return allowNumbers[0];
     }
     
     
