@@ -1,3 +1,15 @@
+''' Security '''
+
+Added number of clients to startup messages
+
+''' Cache '''
+
+Ensure cache is properly set up, even if the device model does not correctly set the display name for the flash command. Resolves [ticket:584]
+
+''' HAL '''
+
+Simplified HAL model
+
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6b21.zip V1.6b21]   ==
 
 ''' HAL '''
